--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17167063">Unifying Theories of Psychedelic Drug Effects</a>
+                                    <a href="https://news.ycombinator.com/item?id=17143452">Zuckerberg set up fraudulent scheme to 'weaponise' data, court case alleges</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5853825/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lainon">lainon</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 14:47:36 &nbsp;•&nbsp;
-                                    50 comments &nbsp;•&nbsp;
-                                    219.0 points
+                                    <a class="node" href="https://www.theguardian.com/technology/2018/may/24/mark-zuckerberg-set-up-fraudulent-scheme-weaponise-data-facebook-court-case-alleges?CMP=share_btn_tw">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Malarkey73">Malarkey73</a></strong> &nbsp;•&nbsp;
+                                    2018-05-24 12:54:13 &nbsp;•&nbsp;
+                                    26 comments &nbsp;•&nbsp;
+                                    220.0 points
                                 </span>
                             </td>
                         </tr>
@@ -306,14 +306,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17143200">GDPR Hall of Shame</a>
+                                    <a href="https://news.ycombinator.com/item?id=17170733">An embedded database written in Rust</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://gdprhallofshame.com/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=K0nserv">K0nserv</a></strong> &nbsp;•&nbsp;
-                                    2018-05-24 12:15:40 &nbsp;•&nbsp;
-                                    182 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://github.com/spacejam/sled">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=mountainview">mountainview</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 05:32:28 &nbsp;•&nbsp;
+                                    65 comments &nbsp;•&nbsp;
                                     205.0 points
                                 </span>
                             </td>
@@ -326,15 +326,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17170733">An embedded database written in Rust</a>
+                                    <a href="https://news.ycombinator.com/item?id=17143200">GDPR Hall of Shame</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/spacejam/sled">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=mountainview">mountainview</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 05:32:28 &nbsp;•&nbsp;
-                                    65 comments &nbsp;•&nbsp;
-                                    203.0 points
+                                    <a class="node" href="http://gdprhallofshame.com/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=K0nserv">K0nserv</a></strong> &nbsp;•&nbsp;
+                                    2018-05-24 12:15:40 &nbsp;•&nbsp;
+                                    182 comments &nbsp;•&nbsp;
+                                    205.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 16:30:03.587763</strong>
+            <strong>Last update at 2018-05-28 16:40:03.708874</strong>
         </div>
     </div>
 </div>
