--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17147404">In Twitter’s early days, only one celebrity could tweet at a time</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://theoutline.com/post/4147/in-twitters-early-days-only-one-celebrity-could-tweet-at-a-time">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=evanweaver">evanweaver</a></strong> &nbsp;•&nbsp;
-                                    2018-05-24 19:27:46 &nbsp;•&nbsp;
-                                    136 comments &nbsp;•&nbsp;
-                                    243.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17131431">Philip Roth has died</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -466,6 +446,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17170733">An embedded database written in Rust</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://github.com/spacejam/sled">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=mountainview">mountainview</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 05:32:28 &nbsp;•&nbsp;
+                                    69 comments &nbsp;•&nbsp;
+                                    223.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17167063">Unifying Theories of Psychedelic Drug Effects</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -526,14 +526,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17170733">An embedded database written in Rust</a>
+                                    <a href="https://news.ycombinator.com/item?id=17145811">The Egg (2009)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/spacejam/sled">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=mountainview">mountainview</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 05:32:28 &nbsp;•&nbsp;
-                                    69 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://www.galactanet.com/oneoff/theegg_mod.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
+                                    2018-05-24 16:45:22 &nbsp;•&nbsp;
+                                    51 comments &nbsp;•&nbsp;
                                     222.0 points
                                 </span>
                             </td>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17145811">The Egg (2009)</a>
+                                    <a href="https://news.ycombinator.com/item?id=17143452">Zuckerberg set up fraudulent scheme to 'weaponise' data, court case alleges</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.galactanet.com/oneoff/theegg_mod.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
-                                    2018-05-24 16:45:22 &nbsp;•&nbsp;
-                                    51 comments &nbsp;•&nbsp;
-                                    222.0 points
+                                    <a class="node" href="https://www.theguardian.com/technology/2018/may/24/mark-zuckerberg-set-up-fraudulent-scheme-weaponise-data-facebook-court-case-alleges?CMP=share_btn_tw">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Malarkey73">Malarkey73</a></strong> &nbsp;•&nbsp;
+                                    2018-05-24 12:54:13 &nbsp;•&nbsp;
+                                    26 comments &nbsp;•&nbsp;
+                                    220.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 18:10:04.367180</strong>
+            <strong>Last update at 2018-05-28 18:20:03.663142</strong>
         </div>
     </div>
 </div>
