--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -173,8 +173,8 @@
                                     <a class="node" href="https://githubengineering.com/removing-oobgc/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=jbredeche">jbredeche</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 18:58:07 &nbsp;•&nbsp;
-                                    13 comments &nbsp;•&nbsp;
-                                    24.0 points
+                                    14 comments &nbsp;•&nbsp;
+                                    25.0 points
                                 </span>
                             </td>
                         </tr>
@@ -186,35 +186,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17168272">The Supreme Court's Arbitration Ruling Is Screwing Thousands of Chipotle Workers</a>
+                                    <a href="https://news.ycombinator.com/item?id=17169152">I found some COBOL. Last comment is from 1985. Written by my mother</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.huffingtonpost.in/entry/supreme-courts-ruling-this-week-is-already-screwing-thousands-of-chipotle-workers_us_5b0844aae4b0568a880b3e26">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 18:22:37 &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.twitter.com/grauhut/status/1000017084435312642">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=mcenedella">mcenedella</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 21:18:11 &nbsp;•&nbsp;
                                     4 comments &nbsp;•&nbsp;
                                     24.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17171033">NetBSD Network Security Audit</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://blog.netbsd.org/tnf/entry/network_security_audit">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ognyankulev">ognyankulev</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 07:21:31 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    22.0 points
                                 </span>
                             </td>
                         </tr>
@@ -474,6 +454,26 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=raleighm">raleighm</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 10:38:27 &nbsp;•&nbsp;
                                     10 comments &nbsp;•&nbsp;
+                                    14.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17173593">Anatomy of an online misinformation network</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0196087">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 17:24:27 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
                                     13.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 18:20:03.663142</strong>
+            <strong>Last update at 2018-05-28 18:30:03.760409</strong>
         </div>
     </div>
 </div>
