--- a/jobs/index.html
+++ b/jobs/index.html
@@ -144,7 +144,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17174122">Team Lead for super fast growing product</a>
+                                    <a href="https://news.ycombinator.com/item?id=17174122">Shoptiques (YC W12) is hiring a team lead for a fast-growing product</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
@@ -577,7 +577,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 20:00:03.827954</strong>
+            <strong>Last update at 2018-05-28 20:10:03.887939</strong>
         </div>
     </div>
 </div>
