--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17172305">Vuetube – Video resources that will help you to improve your Vue skills</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://vuetube.surge.sh">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=flowck">flowck</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 13:37:26 &nbsp;•&nbsp;
+                                    15 comments &nbsp;•&nbsp;
+                                    87.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17166258">Psychopathy to Altruism: Neurobiology of the Selfish–Selfless Spectrum</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -206,14 +226,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17160396">Sinking of the US Cargo Vessel El Faro: Illustrated digest [pdf]</a>
+                                    <a href="https://news.ycombinator.com/item?id=17173283">APL deserves its renaissance too</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.ntsb.gov/investigations/AccidentReports/Reports/SPC1801.pdf">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=curtis">curtis</a></strong> &nbsp;•&nbsp;
-                                    2018-05-26 05:29:52 &nbsp;•&nbsp;
-                                    28 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://wordsandbuttons.online/apl_deserves_its_renaissance_too.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=okaleniuk">okaleniuk</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 16:30:47 &nbsp;•&nbsp;
+                                    42 comments &nbsp;•&nbsp;
                                     85.0 points
                                 </span>
                             </td>
@@ -226,35 +246,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17173283">APL deserves its renaissance too</a>
+                                    <a href="https://news.ycombinator.com/item?id=17160396">Sinking of the US Cargo Vessel El Faro: Illustrated digest [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://wordsandbuttons.online/apl_deserves_its_renaissance_too.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=okaleniuk">okaleniuk</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 16:30:47 &nbsp;•&nbsp;
-                                    39 comments &nbsp;•&nbsp;
-                                    84.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17171033">NetBSD Network Security Audit</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://blog.netbsd.org/tnf/entry/network_security_audit">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ognyankulev">ognyankulev</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 07:21:31 &nbsp;•&nbsp;
-                                    11 comments &nbsp;•&nbsp;
-                                    84.0 points
+                                    <a class="node" href="https://www.ntsb.gov/investigations/AccidentReports/Reports/SPC1801.pdf">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=curtis">curtis</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 05:29:52 &nbsp;•&nbsp;
+                                    28 comments &nbsp;•&nbsp;
+                                    85.0 points
                                 </span>
                             </td>
                         </tr>
@@ -294,7 +294,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=stargrave">stargrave</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 19:33:01 &nbsp;•&nbsp;
                                     27 comments &nbsp;•&nbsp;
-                                    81.0 points
+                                    82.0 points
                                 </span>
                             </td>
                         </tr>
@@ -486,14 +486,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166861">Writing self-documenting Swift code</a>
+                                    <a href="https://news.ycombinator.com/item?id=17171101">Theorem Proving in Lean</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.swiftbysundell.com/posts/writing-self-documenting-swift-code">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 13:45:25 &nbsp;•&nbsp;
-                                    18 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://leanprover.github.io/theorem_proving_in_lean/introduction.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=benwr">benwr</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 07:39:27 &nbsp;•&nbsp;
+                                    5 comments &nbsp;•&nbsp;
                                     70.0 points
                                 </span>
                             </td>
@@ -506,15 +506,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17171101">Theorem Proving in Lean</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166861">Writing self-documenting Swift code</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://leanprover.github.io/theorem_proving_in_lean/introduction.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=benwr">benwr</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 07:39:27 &nbsp;•&nbsp;
-                                    5 comments &nbsp;•&nbsp;
-                                    67.0 points
+                                    <a class="node" href="https://www.swiftbysundell.com/posts/writing-self-documenting-swift-code">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 13:45:25 &nbsp;•&nbsp;
+                                    18 comments &nbsp;•&nbsp;
+                                    70.0 points
                                 </span>
                             </td>
                         </tr>
@@ -553,7 +553,7 @@
                                     <a class="node" href="https://www.theverge.com/2018/5/28/17401892/intel-age-discrimination-layoffs-investigation">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 09:03:10 &nbsp;•&nbsp;
-                                    54 comments &nbsp;•&nbsp;
+                                    55 comments &nbsp;•&nbsp;
                                     65.0 points
                                 </span>
                             </td>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 21:20:04.328552</strong>
+            <strong>Last update at 2018-05-28 21:30:03.867582</strong>
         </div>
     </div>
 </div>
