--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17174976">Best Startup Response to GDPR</a>
+                                    <a href="https://news.ycombinator.com/item?id=17173268">University fined £120,000 for data breach</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://mailtrain.gen.co/archive/HJvqkHMJ7/BJTEQ1Gyl/HkfWSTffyl">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=jobriant11">jobriant11</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 21:32:06 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    9.0 points
+                                    <a class="node" href="http://www.bbc.com/news/technology-44197118">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=scary">scary</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 16:28:21 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
+                                    10.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 22:20:03.796951</strong>
+            <strong>Last update at 2018-05-28 22:30:03.007816</strong>
         </div>
     </div>
 </div>
